package rest.techpro.model;

public class Accessory extends Product {

	public Accessory(Brand brand, Category category, String label, double price) {
		super(brand, category, label, price);
		// TODO Auto-generated constructor stub
	}

}
