package rest.techpro.model;

public enum Brand {

}
