package rest.techpro.model;

public enum Category {

}
