@startuml Techpro

package techpro{
    package model{
        enum Brand{
        }
        enum Category{
        }

        abstract class Product{
            # brand: Brand
            # price: double
            # label: string
            # category: Category
        }

        class Computer extends Product{
            - isDesktop: boolean

        }

        class Phone extends Product{
            - isFixed: boolean

        }

        class Storage extends Product{
            - isUsb: boolean
            
        }

        class Accessory extends Product{
        }

    }
    package dao{
        interface GlobalDao{
            add(p: Product)
            delete(p: Product)
            update(p: Product)
            addAll(listP: List<Product>)
            deleteAll(listP: List<Product>)
            updateAll(listP: List<Product>)

        }
        class ComputerDao implements GlobalDao{
            
        }

        class PhoneDao implements GlobalDao{

        }

        class StorageDao implements GlobalDao{

        }

        class AccessoriesDao implements GlobalDao{

        }

    }
    package resource{
        class ComputerResource{
            + addComputer(p: Product)
            + deleteComputer(p: Product)
            + updateComputer(p: Product)
            + addAllComputer(listP: List<Product>)
            + deleteAllComputer(listP: List<Product>)
            + updateAllComputer(listP: List<Product>)

        }

        class PhoneResource{
            + addPhone(p: Product)
            + deletePhone(p: Product)
            + updatePhone(p: Product)
            + addAllPhone(listP: List<Product>)
            + deleteAllPhone(listP: List<Product>)
            + updateAllPhone(listP: List<Product>)


        }

        class StorageResource {
            + addStorage(p: Product)
            + deleteStorage(p: Product)
            + updateStorage(p: Product)
            + addAllStorage(listP: List<Product>)
            + deleteAllStorage(listP: List<Product>)
            + updateAllStorage(listP: List<Product>)


        }

        class AccessoriesResource{
            + addAccessories(p: Product)
            + deleteAccessories(p: Product)
            + updateAccessories(p: Product)
            + addAllAccessories(listP: List<Product>)
            + deleteAllAccessories(listP: List<Product>)
            + updateAllAccessories(listP: List<Product>)


        }

    }
}
Product o--> Category
Product o--> Brand

GlobalDao *.> Product

ComputerResource *-up-> ComputerDao
PhoneResource *-up-> PhoneDao
StorageResource *-up-> StorageDao
AccessoriesResource *-up-> AccessoriesDao

@endpuml